# fp-in-the-cloud

./: .ghci  .gitignore  README.md  server.cabal
resources/css/: style.css
src/: Main.hs  Transform.hs
src/Model/: Definition.hs
src/View/: .Index.hs.swp  Add.hs  Added.hs  Error.hs  Header.hs  Index.hs
