name:          pirategold 
version:       0.1
license:       Apache-2.0
license-file:  LICENCE
author:        Katie Miller
category:      Web
build-type:    Simple
cabal-version: >= 1.10

executable server
  main-is:           Main.hs
  ghc-options:       -Wall
  other-modules:     Model.Definition
                   , View.Header
                   , View.Index 
                   , View.Add
                   , View.Added
                   , View.Error
  other-extensions:  OverloadedStrings 
  build-depends:       base >=4.6 && <4.7
                     , transformers >=0.3 && <0.4
                     , wai >=2.0 && <2.1
                     , wai-middleware-static >=0.4 && <0.5
                     , wai-extra >=2.0.3 && <2.2
                     , warp >=2.0.3 && <2.1
                     , scotty >=0.6 && <0.7
                     , unix >=2.6 && <2.7
                     , http-types >=0.8.3 && <0.10
                     , data-default >=0.5.3 && <0.6
                     , network-conduit >=1.0.3 && <1.2
                     , blaze-html >= 0.7 && <0.8
                     , text >=0.10 && <1.2
                     , postgresql-libpq >=0.8.2 && <0.9
                     , postgresql-simple >=0.4 && <0.4.0.2
  hs-source-dirs:    src
  default-language:  Haskell2010
