name:                 fp-in-the-cloud
version:              0.1
license:              Apache-2.0
license-file:         LICENCE
author:               Katie Miller
maintainer:           Katie Miller
copyright:            Copyright (C) 2014 Katie Miller
synopsis:             Functional Programming in the Cloud workshop for Codemania 2014.
category:             Web
description:          Functional Programming in the Cloud workshop for Codemania 2014.
homepage:             https://github.com/codemiller/fp-in-the-cloud
bug-reports:          https://github.com/codemiller/fp-in-the-cloud/issues
cabal-version:        >= 1.10
build-type:           Custom

source-repository     head
  type:               git
  location:           git@github.com:codemiller/fp-in-the-cloud.git

library
  default-language:   Haskell2010
  ghc-options:        -Wall
  other-modules:      Model.Definition
                      , View.Header
                      , View.Index 
                      , View.Add
                      , View.Added
                      , View.Error
                      , Transform
  other-extensions:   OverloadedStrings 
  build-depends:        base >=4.6 && <4.7
                      , transformers >=0.3 && <0.4
                      , wai >=2.0 && <2.1
                      , wai-middleware-static >=0.4 && <0.5
                      , wai-extra >=2.0.3 && <2.2
                      , warp >=2.0.3 && <2.1
                      , scotty >=0.6 && <0.7
                      , unix >=2.6 && <2.7
                      , http-types >=0.8.3 && <0.10
                      , data-default >=0.5.3 && <0.6
                      , network-conduit >=1.0.3 && <1.2
                      , blaze-html >= 0.7 && <0.8
                      , text >=0.10 && <1.2
                      , postgresql-libpq >=0.8.2 && <0.9
                      , postgresql-simple >=0.4 && <0.4.0.2
  hs-source-dirs:     src

executable server
  default-language:   Haskell2010
  main-is:            Main.hs
  ghc-options:        -Wall
  other-extensions:   OverloadedStrings 
  build-depends:        base >=4.6 && <4.7
                      , transformers >=0.3 && <0.4
                      , wai >=2.0 && <2.1
                      , wai-middleware-static >=0.4 && <0.5
                      , wai-extra >=2.0.3 && <2.2
                      , warp >=2.0.3 && <2.1
                      , scotty >=0.6 && <0.7
                      , unix >=2.6 && <2.7
                      , http-types >=0.8.3 && <0.10
                      , data-default >=0.5.3 && <0.6
                      , network-conduit >=1.0.3 && <1.2
                      , blaze-html >= 0.7 && <0.8
                      , text >=0.10 && <1.2
                      , postgresql-libpq >=0.8.2 && <0.9
                      , postgresql-simple >=0.4 && <0.4.0.2
  hs-source-dirs:     src

test-suite doctests
  type:               exitcode-stdio-1.0

  main-is:            doctests.hs

  default-language:   Haskell2010

  build-depends:        base >=4.6 && <4.7
                      , doctest >=0.8 && <=0.9.11
                      , filepath >=1.3 && <1.4
                      , directory >=1.1 && <=1.3
                      , QuickCheck >=2.0 && <=2.8

  ghc-options:       -Wall
                     -threaded

  hs-source-dirs:
                     test
